// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<textarea> demo: > render [auto-size] correctly 1`] = `
<div class="sd-textarea-wrapper">
  <div class="sd-textarea-mirror">This is the contents of the textarea. This is the contents of the textarea. This is the contents of the textarea.
  </div><textarea class="sd-textarea" value="This is the contents of the textarea. This is the contents of the textarea. This is the contents of the textarea."></textarea>
  <!--v-if-->
  <!--v-if-->
</div>
<div class="sd:mt-5 sd-textarea-wrapper">
  <div class="sd-textarea-mirror">This is the contents of the textarea. This is the contents of the textarea. This is the contents of the textarea.
  </div><textarea class="sd-textarea" value="This is the contents of the textarea. This is the contents of the textarea. This is the contents of the textarea."></textarea>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`<textarea> demo: > render [basic] correctly 1`] = `
<div class="sd-textarea-wrapper">
  <!--v-if--><textarea class="sd-textarea" placeholder="Please enter something" value=""></textarea>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`<textarea> demo: > render [status] correctly 1`] = `
<div class="sd-space sd-space-vertical sd:w-full" style="column-gap: 24px; row-gap: 24px;">
  <!---->
  <div class="sd-space-item">
    <div class="sd-textarea-wrapper sd-textarea-disabled">
      <!--v-if--><textarea disabled="" class="sd-textarea" placeholder="Disabled status" value=""></textarea>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-textarea-wrapper sd-textarea-error">
      <!--v-if--><textarea aria-invalid="true" class="sd-textarea" placeholder="Error status" value=""></textarea>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`<textarea> demo: > render [word-limit] correctly 1`] = `
<div class="sd-space sd-space-vertical sd-space-fill" style="column-gap: 24px; row-gap: 24px;">
  <!---->
  <div class="sd-space-item">
    <div class="sd-textarea-wrapper">
      <!--v-if--><textarea class="sd-textarea" placeholder="Please enter something" value=""></textarea>
      <div class="sd-textarea-word-limit">0/10</div>
      <!--v-if-->
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-textarea-wrapper">
      <!--v-if--><textarea class="sd-textarea" placeholder="Please enter something" value=""></textarea>
      <div class="sd-textarea-word-limit">0/10</div>
      <!--v-if-->
    </div>
  </div>
</div>
`;
